--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+6-7 [一周世界舆论聚焦：实现“国际传播能力”和“国际话语权”的前提是实事求是](/articles/ft/1045513.md)
+
+6-7 [台湾不应落入“疫苗民族主义”陷阱](/articles/ft/1045514.md)
+
 6-7 [一边批评一边投资：西方金融机构在中国煤炭行业的身影](/articles/ft/1045515.md)
 
 6-7 [明星CEO与企业品牌形象的左右手互搏](/articles/ft/1045516.md)
@@ -596,8 +600,4 @@
 4-1 [BioNTech/辉瑞疫苗对青少年安全有效](/articles/ft/1045811.md)
 
 4-1 [华为去年经营现金流缩减61.5%](/articles/ft/1045812.md)
-
-4-1 [魏蔚：卖画重要，但并非最重要](/articles/ft/1045813.md)
-
-4-1 [印度与“一带一路”：对接还是对冲？](/articles/ft/1045814.md)
 
