--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-7 [德国爆口罩丑闻 卫生部长遭围剿](/articles/dw/1042075.md)
+
 6-7 [中国拼疫苗研发 21款进入临床试验](/articles/dw/1042076.md)
 
 6-7 [广东疫情持续延烧 政府严防人员流动](/articles/dw/1042077.md)
@@ -598,6 +600,4 @@
 5-20 [德语媒体：供应链法缺乏现实意义](/articles/dw/1042373.md)
 
 5-20 [德国一周大小事](/articles/dw/1042374.md)
-
-5-20 [蔡英文执政5周年 国民党指责“缺水缺电缺疫苗”](/articles/dw/1042375.md)
 
