--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-7 [拜登政府制定对华战略的关键人物](/articles/nyt/1046767.md)
+
 6-7 [简报：微软必应短暂屏蔽“坦克人”；广州全民核酸检测](/articles/nyt/1046768.md)
 
 6-7 [微软必应“六四”当日屏蔽“坦克人”图片](/articles/nyt/1046769.md)
@@ -598,6 +600,4 @@
 3-22 [简报：美中高层会面无实质突破；亚裔反歧视游行席卷全美](/articles/nyt/1047065.md)
 
 3-19 [美国该怎样有效应对中国挑战](/articles/nyt/1047066.md)
-
-3-19 [亚裔女性，种族主义和性别歧视的双重受害者](/articles/nyt/1047067.md)
 
