--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+6-7 [由男童偷窥事件所想到的](/articles/ft/1045511.md)
+
+6-7 [易纲：引入气候相关信息强制披露制](/articles/ft/1045512.md)
+
 6-7 [一周世界舆论聚焦：实现“国际传播能力”和“国际话语权”的前提是实事求是](/articles/ft/1045513.md)
 
 6-7 [台湾不应落入“疫苗民族主义”陷阱](/articles/ft/1045514.md)
@@ -596,8 +600,4 @@
 4-1 [拜登公布2万亿美元基建计划](/articles/ft/1045809.md)
 
 4-1 [每周时事分析：中国在新疆问题上面临的难题](/articles/ft/1045810.md)
-
-4-1 [BioNTech/辉瑞疫苗对青少年安全有效](/articles/ft/1045811.md)
-
-4-1 [华为去年经营现金流缩减61.5%](/articles/ft/1045812.md)
 
