--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-7 [中国与东盟建立对话30周年：东南亚对中态度为何？](/articles/dw/1042074.md)
+
 6-7 [德国爆口罩丑闻 卫生部长遭围剿](/articles/dw/1042075.md)
 
 6-7 [中国拼疫苗研发 21款进入临床试验](/articles/dw/1042076.md)
@@ -598,6 +600,4 @@
 5-20 [女子身背数月大婴儿偷渡 冰冷海水中海警搭救](/articles/dw/1042372.md)
 
 5-20 [德语媒体：供应链法缺乏现实意义](/articles/dw/1042373.md)
-
-5-20 [德国一周大小事](/articles/dw/1042374.md)
 
