--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-7 [专访媒体研究学者林慕莲谈中国重塑世界媒体](/articles/voa/1040298.md)
+
+6-7 [中国召集与东盟的特别外长会议 南中国海问题依然是关键](/articles/voa/1040299.md)
+
 6-7 [匈牙利首都市长发言反对建中国大学分校 北京“强烈抗议”](/articles/voa/1040300.md)
 
 6-7 [中国官员：解散或取缔香港支联会只是时间问题](/articles/voa/1040301.md)
@@ -596,8 +600,4 @@
 5-24 [报道：情报揭示武汉病毒研究所研究人员患病细节](/articles/voa/1040596.md)
 
 5-24 [台湾疫情严峻 金门另设防疫规定 台北称违法](/articles/voa/1040597.md)
-
-5-24 [在中国审查严钱难赚，好莱坞开始正视骨感现实](/articles/voa/1040598.md)
-
-5-24 [白俄罗斯劫持一架国际航班以逮捕机上异见人士 布林肯：此举令人震惊](/articles/voa/1040599.md)
 
