--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-7 [【立此存照】男生举牌成就自己的梦想 女生举牌成为别人的青春](/articles/cdt/381682.md)
+
 6-6 [一席 | 遭遇过乌台诗案的苏轼反复地表示要慎言避祸，但作为诗人的他还是要继续写诗](/articles/cdt/381706.md)
 
 6-6 [【404文库】莫狄骁的山房 | “我们”失败了吗？](/articles/cdt/381708.md)
@@ -598,6 +600,4 @@
 5-2 [无逸说 | 中国点火vs印度点火，中国火神山vs印度火神山](/articles/cdt/383020.md)
 
 5-2 [观人随笔 | 当“圣母”成为贬义词](/articles/cdt/383026.md)
-
-5-1 [众新闻 | 港大与学生会割席兼谴责 历年热心政事突扣“政治化”帽子](/articles/cdt/383027.md)
 
