--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,20 @@
 法广
 ------
 
+6-7 [香港支联会前途疑遭中国官方定案：解散或取缔](/articles/rfi/1028435.md)
+
+6-7 [匈高官：复旦建校计划为时尚早 2023年由布市公投决定](/articles/rfi/1028436.md)
+
+6-7 [美国3名跨党派议员乘军机闪电访台 北京今天低调抗议](/articles/rfi/1028437.md)
+
+6-7 [世贸组织女老板这样公开谈论她的“不可能胜”的使命](/articles/rfi/1028438.md)
+
+6-7 [布林肯：将查清新冠病毒来源 向中国追究责任](/articles/rfi/1028439.md)
+
+6-7 [人权专家在伦敦开设“维吾尔法庭” - 法国报纸摘要](/articles/rfi/1028440.md)
+
+6-7 [美国华人纪念六四32周年两大亮点 - 美国专栏](/articles/rfi/1028441.md)
+
 6-7 [新冠肺炎疫情：台湾今报新增211例本土案](/articles/rfi/1028442.md)
 
 6-7 [中国谴责布达佩斯民众抗议建复旦分校 欧盟对匈牙利阻碍谴责香港问题不满 促机制改革](/articles/rfi/1028443.md)
@@ -586,18 +600,4 @@
 6-2 [Amazon求快仓库员工常受伤 将变更生产力监督机制 – 法国国际广播电台 - RFI](/articles/rfi/1028733.md)
 
 6-2 [欧洲之树与法国之树 ——欧洲文化遗产的一大组成 - 文化遗产](/articles/rfi/1028734.md)
-
-6-2 [经济复苏派和通膨疑虑派交战 亚股涨跌互见 – 法国国际广播电台 - RFI](/articles/rfi/1028735.md)
-
-6-2 [拜登出席塔尔萨种族屠杀百年纪念活动：“我来这里是为了打破沉默” - 要闻解说](/articles/rfi/1028736.md)
-
-6-2 [中国将宣传触角伸向全球 - 法国报纸摘要](/articles/rfi/1028737.md)
-
-6-2 [如果东京奥运会取消 日本要赔偿多少钱？ - 东京专栏](/articles/rfi/1028738.md)
-
-6-2 [大直美自曝忧郁症后退赛 乔帅赞勇敢决定 – 法国国际广播电台 - RFI](/articles/rfi/1028739.md)
-
-6-2 [变异病毒株「有如猛兽」 墨尔本续封城1周 – 法国国际广播电台 - RFI](/articles/rfi/1028740.md)
-
-6-2 [台湾外交部谴责中国制造台湾社会矛盾干预疫苗采购](/articles/rfi/1028741.md)
 
