--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-7 [“可互换的亚裔”：亚裔被叫错名字背后的隐性偏见](/articles/nyt/1046765.md)
+
 6-7 [新西兰或首次向中国引渡一名嫌犯](/articles/nyt/1046766.md)
 
 6-7 [拜登政府制定对华战略的关键人物](/articles/nyt/1046767.md)
@@ -598,6 +600,4 @@
 3-22 [敌意与分歧：无果而终的美中高层会晤释放了何种信号](/articles/nyt/1047063.md)
 
 3-22 [拜登上任60天，与中俄走进超级大国竞争新时代](/articles/nyt/1047064.md)
-
-3-22 [简报：美中高层会面无实质突破；亚裔反歧视游行席卷全美](/articles/nyt/1047065.md)
 
