--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,14 @@
 路透
 ------
 
+6-7 [河南鹤壁煤矿事故井下被困八人全部窒息死亡--央视](/articles/reuters/1037175.md)
+
+6-7 [中国工信部：培育一批具有国际竞争力的区块链“名企” 打造产业发展集聚区](/articles/reuters/1037176.md)
+
+6-7 [中国全国人大拟授权上海制定浦东新区法规 以推动高水平开放--报载](/articles/reuters/1037177.md)
+
+6-7 [伦敦交易所表示强行将掉期清算迁至欧盟将损害欧盟利益](/articles/reuters/1037178.md)
+
 6-7 [美指承压人民币收升逾130点 未结汇规模仍大关注市场预期变化](/articles/reuters/1037179.md)
 
 6-7 [中国5月外储规模两连升 美元折算和资产价格变化等因素共同推高](/articles/reuters/1037180.md)
@@ -592,12 +600,4 @@
 5-31 [焦点：越南疫情复燃 科技业供应链受威胁](/articles/reuters/1037473.md)
 
 5-31 [美国参议院共和党阻止成立调查国会骚乱事件的委员会](/articles/reuters/1037474.md)
-
-5-31 [独家：马来西亚仓库提货排长队 加剧铝供应短缺问题](/articles/reuters/1037475.md)
-
-5-31 [综述：中国紧锣密鼓推进绿色金融 银行高层警示过快过急引发风险](/articles/reuters/1037476.md)
-
-5-31 [疫情冲击下汽车产业可能适合作为东亚产业链合作的抓手--中国CF40报告](/articles/reuters/1037477.md)
-
-5-31 [伊朗央行总裁因参选总统遭到撤换](/articles/reuters/1037478.md)
 
