--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+6-7 [道歉并不是真正的历史清算](/articles/ft/1045510.md)
+
 6-7 [由男童偷窥事件所想到的](/articles/ft/1045511.md)
 
 6-7 [易纲：引入气候相关信息强制披露制](/articles/ft/1045512.md)
@@ -598,6 +600,4 @@
 4-2 [后疫情时期，债市4月“魔咒”会否回归？](/articles/ft/1045808.md)
 
 4-1 [拜登公布2万亿美元基建计划](/articles/ft/1045809.md)
-
-4-1 [每周时事分析：中国在新疆问题上面临的难题](/articles/ft/1045810.md)
 
