--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+6-7 [叶伦升息说和G7全球企业税影响  亚股走势不一 – 法国国际广播电台 - RFI](/articles/rfi/1028430.md)
+
+6-7 [中国今高考登场 作文当先扣题共产党百年史](/articles/rfi/1028431.md)
+
+6-7 [红歌唱到香港促爱国爱党](/articles/rfi/1028432.md)
+
+6-7 [乌克兰球衣浮现遭俄并吞领土 莫斯科抗议 – 法国国际广播电台 - RFI](/articles/rfi/1028433.md)
+
+6-7 [美军撤离阿富汗翻译忧遭报复 塔利班喊话别怕 – 法国国际广播电台 - RFI](/articles/rfi/1028434.md)
+
 6-7 [香港支联会前途疑遭中国官方定案：解散或取缔](/articles/rfi/1028435.md)
 
 6-7 [匈高官：复旦建校计划为时尚早 2023年由布市公投决定](/articles/rfi/1028436.md)
@@ -590,14 +600,4 @@
 6-2 [布林肯访哥斯大黎加 讨论非法移民问题 – 法国国际广播电台 - RFI](/articles/rfi/1028728.md)
 
 6-2 [COVID-19全球确诊逾1亿7109万例 超过368万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1028729.md)
-
-6-2 [赫佐格当选以色列总统 7月就任 – 法国国际广播电台 - RFI](/articles/rfi/1028730.md)
-
-6-2 [广东变种病毒超快超强 全民总动员跟病毒赛跑](/articles/rfi/1028731.md)
-
-6-2 [白夏：唐吉田去日本照料病重的女儿安能威胁国家安全](/articles/rfi/1028732.md)
-
-6-2 [Amazon求快仓库员工常受伤 将变更生产力监督机制 – 法国国际广播电台 - RFI](/articles/rfi/1028733.md)
-
-6-2 [欧洲之树与法国之树 ——欧洲文化遗产的一大组成 - 文化遗产](/articles/rfi/1028734.md)
 
