--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-7 [布林肯表示将彻查新冠病毒源头 追究中国责任](/articles/voa/1040297.md)
+
 6-7 [专访媒体研究学者林慕莲谈中国重塑世界媒体](/articles/voa/1040298.md)
 
 6-7 [中国召集与东盟的特别外长会议 南中国海问题依然是关键](/articles/voa/1040299.md)
@@ -598,6 +600,4 @@
 5-24 [天问一号成功登陆火星 美中进入新一轮太空竞赛](/articles/voa/1040595.md)
 
 5-24 [报道：情报揭示武汉病毒研究所研究人员患病细节](/articles/voa/1040596.md)
-
-5-24 [台湾疫情严峻 金门另设防疫规定 台北称违法](/articles/voa/1040597.md)
 
