--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,6 +9,8 @@
 
 6-7 [【立此存照】男生举牌成就自己的梦想 女生举牌成为别人的青春](/articles/cdt/381682.md)
 
+6-7 [【CDT月度人物】成都四十九中坠亡学生的母亲以及追问真相的人们](/articles/cdt/381695.md)
+
 6-6 [一席 | 遭遇过乌台诗案的苏轼反复地表示要慎言避祸，但作为诗人的他还是要继续写诗](/articles/cdt/381706.md)
 
 6-6 [【404文库】莫狄骁的山房 | “我们”失败了吗？](/articles/cdt/381708.md)
@@ -598,6 +600,4 @@
 5-3 [西坡读史 | 印度人也是人](/articles/cdt/383010.md)
 
 5-3 [金财经 | 昨天，很多人的五一假期，结束在了北京西站](/articles/cdt/383011.md)
-
-5-3 [【CDT周报】第十五期：一个道德败坏的人，唯一让他高兴的事，就是别人倒霉了](/articles/cdt/383012.md)
 
