--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-7 [广州基督徒六四地铁举牌被捕](/articles/rfa/1045388.md)
+
 6-7 [解放军展示远程多管火箭炮新战法  目标或是台湾非美军](/articles/rfa/1045389.md)
 
 6-7 [六四当天“小红书”微博提问日期 遭停用调查](/articles/rfa/1045390.md)
@@ -598,6 +600,4 @@
 5-5 [中国《宗教教职人员管理办法》实施数日  严苛程度甚于以往](/articles/rfa/1045686.md)
 
 5-5 [G7外长会议捍卫国际秩序  推动多边体系应对中俄](/articles/rfa/1045687.md)
-
-5-4 [常玮平疑遭酷刑引起国际关注  家属拟提诉讼不获受理](/articles/rfa/1045688.md)
 
