--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+6-8 [亚马逊创始人贝索斯宣布计划下月进行太空之旅](/articles/voa/1040287.md)
+
+6-8 [时事大家谈: “战狼国师”奉旨宣教，习近平会放弃战狼外交？](/articles/voa/1040288.md)
+
+6-8 [香港网上集会悼念李旺阳逝世9周年 民调显示62%不认同悼念六四危害国安](/articles/voa/1040289.md)
+
+6-8 [遏制骇客网攻 美拟加大打击力度包括军事选项](/articles/voa/1040290.md)
+
+6-8 [审查孔子学院 日本、澳大利亚展开行动](/articles/voa/1040291.md)
+
 6-8 [中国恶性持刀杀人伤人事件频发 百年党庆在即中共频遭打脸](/articles/voa/1040292.md)
 
 6-7 [美参议员访台 为何中国网民对北京发难？](/articles/voa/1040293.md)
@@ -590,14 +600,4 @@
 5-25 [时事大家谈: 饥饿记忆与恐惧，袁隆平离世触动中国?](/articles/voa/1040585.md)
 
 5-25 [大宗商品价格连创新高，北京急忙约谈行业大佬，稳定市场](/articles/voa/1040586.md)
-
-5-25 [国际社会谴责“劫机”事件 欧盟考虑避开白俄罗斯领空](/articles/voa/1040587.md)
-
-5-25 [疫情升温之下 台湾面临接受中国疫苗的压力](/articles/voa/1040588.md)
-
-5-24 [谭德塞吁各国支持中低收入国家 四个月内完成2.5亿人疫苗接种](/articles/voa/1040589.md)
-
-5-24 [台湾抗议中国阻挠其参与世界卫生大会](/articles/voa/1040590.md)
-
-5-24 [美伊继续就核武协议角力](/articles/voa/1040591.md)
 
