--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+6-8 [抗议中国复旦大学设分校  匈牙利首都出现示威](/articles/rfa/1045385.md)
+
+6-8 [七国领导人峰会将举行  抵制北京奥运声浪升高](/articles/rfa/1045386.md)
+
 6-8 [美议员D-Day乘霸王运输机赴台 向北京释强烈信号](/articles/rfa/1045387.md)
 
 6-7 [广州基督徒六四地铁举牌被捕](/articles/rfa/1045388.md)
@@ -596,8 +600,4 @@
 5-5 [维吾尔人在纪录片里忏悔     家属喊冤](/articles/rfa/1045683.md)
 
 5-5 [加拿大跨党派议员一致恭喜蔡英文  专家称亲近台湾不再是禁忌](/articles/rfa/1045684.md)
-
-5-5 [从变调的五四精神到“饭圈文化”](/articles/rfa/1045685.md)
-
-5-5 [中国《宗教教职人员管理办法》实施数日  严苛程度甚于以往](/articles/rfa/1045686.md)
 
