--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-8 [国际环境日谈能源企业的拐点 - 环境与发展](/articles/rfi/1028411.md)
+
+6-8 [中国防火墙出口非洲 尼日利亚向北京取经](/articles/rfi/1028412.md)
+
 6-8 [欧股3大指数小幅涨跌 – 法国国际广播电台 - RFI](/articles/rfi/1028413.md)
 
 6-8 [加美官员4月曾秘密协商以促进两加拿大人在华获释](/articles/rfi/1028414.md)
@@ -596,8 +600,4 @@
 6-3 [国际油价上扬 延续先前涨势 – 法国国际广播电台 - RFI](/articles/rfi/1028709.md)
 
 6-3 [美将公布重要经济数据 美国股市收盘小涨 – 法国国际广播电台 - RFI](/articles/rfi/1028710.md)
-
-6-3 [白俄当局劫机事件令国际规范受辱，欧盟可信度再受考验 - 国际纵横](/articles/rfi/1028711.md)
-
-6-3 [马克龙下乡 总统大选启动？ - 要闻分析](/articles/rfi/1028712.md)
 
