--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-8 [【网络民议】腾讯副总裁问在哪看未播完的海外剧  网友：暗示广电该做事了](/articles/cdt/381654.md)
+
 6-8 [【立此存照】兰新线事故9名遇难者均为女性 相关帖子被全面删除](/articles/cdt/381658.md)
 
 6-8 [明报 | 邹幸彤：烛光承载良知重量  港人执着说出真相](/articles/cdt/381661.md)
@@ -598,6 +600,4 @@
 5-3 [曹教授｜还要多少条命才能唤醒执法者的人性？](/articles/cdt/382998.md)
 
 5-4 [【图说天朝】在新疆被禁用的文件传输应用：快牙](/articles/cdt/383006.md)
-
-5-3 [北青深一度 | 女孩举报老师猥亵之后，征集到了八个“盟友”](/articles/cdt/383008.md)
 
