--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-8 [美寻求盟国一致行动 可能抵制北京冬奥 – 法国国际广播电台 - RFI](/articles/rfi/1028401.md)
+
 6-8 [套子在收紧，《苹果日报》的日子似乎是不多了 - 法国世界报](/articles/rfi/1028402.md)
 
 6-8 [2名中国人在尼日尔遭绑架](/articles/rfi/1028403.md)
@@ -598,6 +600,4 @@
 6-3 [全球最大肉商JBS疑遭俄骇客攻击 拜登研究报复选项 – 法国国际广播电台 - RFI](/articles/rfi/1028699.md)
 
 6-3 [美军2020海外用兵 只承认酿平民23死 – 法国国际广播电台 - RFI](/articles/rfi/1028700.md)
-
-6-3 [NBA老鹰103比89击退尼克 取得季后赛次轮门票 – 法国国际广播电台 - RFI](/articles/rfi/1028701.md)
 
