--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,12 @@
 纽约时报
 ------
 
+6-8 [中国实施“三孩”政策的真正原因](/articles/nyt/1046762.md)
+
+6-8 [简报：美国推进史上最全面产业政策法案，对抗中国；贝佐斯将飞往太空](/articles/nyt/1046763.md)
+
+6-8 [美参院将通过史上最全面产业政策法案，与中国竞争](/articles/nyt/1046764.md)
+
 6-7 [“可互换的亚裔”：亚裔被叫错名字背后的隐性偏见](/articles/nyt/1046765.md)
 
 6-7 [新西兰或首次向中国引渡一名嫌犯](/articles/nyt/1046766.md)
@@ -594,10 +600,4 @@
 3-22 [精英亚裔，成功和地位无法让你们免于仇恨和歧视](/articles/nyt/1047060.md)
 
 3-22 [拜登先生，别再对中国“放狠话”了](/articles/nyt/1047061.md)
-
-3-22 [中韩民众如何看待亚特兰大枪击案](/articles/nyt/1047062.md)
-
-3-22 [敌意与分歧：无果而终的美中高层会晤释放了何种信号](/articles/nyt/1047063.md)
-
-3-22 [拜登上任60天，与中俄走进超级大国竞争新时代](/articles/nyt/1047064.md)
 
