--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,16 @@
 路透
 ------
 
+6-8 [数据观测：中国5月CPI同比涨1.6% PPI加速冲高至8.5%或创逾12年半高点](/articles/reuters/1037137.md)
+
+6-8 [5月全球黄金ETF持仓回升 中国基金主导下亚洲继续流出--世界黄金协会](/articles/reuters/1037138.md)
+
+6-8 [基因测序仪厂商齐碳科技B轮融资超4亿元，高瓴创投、鼎晖VGC联合领投](/articles/reuters/1037139.md)
+
+6-8 [禾赛科技称完成超过3亿美元的D轮融资 领投方包括高瓴、小米、美团等](/articles/reuters/1037140.md)
+
+6-8 [苹果的隐私保护新功能因监管原因在中国将不可用](/articles/reuters/1037141.md)
+
 6-8 [亚股开盘上涨，MSCI明晟全球市场指数创史上最高收位](/articles/reuters/1037142.md)
 
 6-8 [只有快速转型实现“净零”排放才能提升全球GDP--央行联合组织报告](/articles/reuters/1037143.md)
@@ -590,14 +600,4 @@
 5-31 [德国希望澄清有关美国对默克尔进行间谍活动的报导](/articles/reuters/1037435.md)
 
 5-31 [中国外交部：台湾民进党阻挡大陆疫苗输台 是对同胞生命健康的漠视](/articles/reuters/1037436.md)
-
-5-31 [焦点：人民币升值难左右中国债市风向 6月走势仍看资金面脸色](/articles/reuters/1037437.md)
-
-5-31 [中国央行：自6月15日起金融机构外汇存款准备金率上调2个百分点至7%](/articles/reuters/1037438.md)
-
-5-31 [钢材价格下跌速度超越铁矿石价格 中国钢厂陷入困境](/articles/reuters/1037439.md)
-
-5-31 [OECD上调全球增长预估 得益于疫苗推广及美国刺激政策](/articles/reuters/1037440.md)
-
-5-31 [人民币缩量收升再创逾三年新高 月度升幅创六个月来最大](/articles/reuters/1037441.md)
 
