--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-8 [香港国安处拘两人　涉派发「港独」传单](/articles/dw/1042054.md)
+
 6-8 [东盟外长齐聚重庆  北京:做大合作蛋糕](/articles/dw/1042055.md)
 
 6-8 [暌违五年　美台重启贸易谈判](/articles/dw/1042056.md)
@@ -598,6 +600,4 @@
 5-22 [维瓦尔第：《塞纳河庆典小夜曲》](/articles/dw/1042352.md)
 
 5-21 [缅甸选举委员会计划解散昂山素季领导的政党](/articles/dw/1042353.md)
-
-5-21 [德语媒体：共同抗衡中国](/articles/dw/1042354.md)
 
