--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-8 [华尔街日报：美国国家实验室曾得出结论新冠病毒可能来自武汉实验室](/articles/voa/1040277.md)
+
 6-8 [打击北京盗窃美国科技 司法部“中国行动计划”首宗诉讼案开审](/articles/voa/1040278.md)
 
 6-8 [塑造“可信、可爱、可敬”中国？ 布林肯：北京可能意识到战狼外交起反效果](/articles/voa/1040279.md)
@@ -598,6 +600,4 @@
 5-25 [台海冲突时韩国应怎么做？ 五角大楼：由韩国人自己决定](/articles/voa/1040575.md)
 
 5-25 [布林肯前往中东 在以色列-哈马斯停火基础上推动加沙重建](/articles/voa/1040576.md)
-
-5-25 [台海升温中民主台湾面对中国威胁做出什么选择？](/articles/voa/1040577.md)
 
