--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+6-8 [贝索斯卸任后将进行太空旅行](/articles/ft/1045502.md)
+
 6-8 [从监听欧洲事件看美国情报部门的走向](/articles/ft/1045503.md)
 
 6-8 [“乡下土猪”真的是在“逆天改命”吗？](/articles/ft/1045504.md)
@@ -598,6 +600,4 @@
 4-2 [台湾列车脱轨 造成数十人死亡](/articles/ft/1045800.md)
 
 4-2 [美房地产经纪公司Compass上市首日上涨](/articles/ft/1045801.md)
-
-4-2 [与中国谈贸易事宜，为何英国首相的阻力比山大？](/articles/ft/1045802.md)
 
