--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+6-8 [英国首相约翰逊希望G7制定关于气候问题的“马歇尔计划”--泰晤士报](/articles/reuters/1037130.md)
+
 6-8 [“美国回来了” 拜登访欧前夕欧盟乐见多边主义](/articles/reuters/1037131.md)
 
 6-8 [独家：苹果正与宁德时代及比亚迪洽谈电动车电池供应--消息](/articles/reuters/1037132.md)
@@ -598,6 +600,4 @@
 6-1 [独家：G7将于7月确定全球最低企业税率 誓言继续支持经济--公报草案](/articles/reuters/1037428.md)
 
 6-1 [金价有望创10个月来最大月线涨幅 受助于美元走软和通胀风险](/articles/reuters/1037429.md)
-
-6-1 [国际油价升至近70美元 受助于需求前景改善](/articles/reuters/1037430.md)
 
