--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-8 [念念回声 ｜南大招生广告惹众怒背后，女性的全方位焦虑即将爆炸](/articles/cdt/381645.md)
+
 6-8 [三联生活周刊｜非升即走：高校“青椒”绩效困境](/articles/cdt/381647.md)
 
 6-8 [【网络民议】腾讯副总裁问在哪看未播完的海外剧  网友：暗示广电该做事了](/articles/cdt/381654.md)
@@ -598,6 +600,4 @@
 5-3 [极昼工作室｜租来的伴娘](/articles/cdt/382996.md)
 
 5-3 [差评｜百度贴吧里，有一批人正在靠躺平对抗内卷](/articles/cdt/382997.md)
-
-5-3 [曹教授｜还要多少条命才能唤醒执法者的人性？](/articles/cdt/382998.md)
 
