--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+6-8 [耶鲁“虎妈”蔡美儿身陷“晚宴门”](/articles/nyt/1046760.md)
+
+6-8 [习近平的舆论斗争“药方”能塑造“可爱”中国吗？](/articles/nyt/1046761.md)
+
 6-8 [中国实施“三孩”政策的真正原因](/articles/nyt/1046762.md)
 
 6-8 [简报：美国推进史上最全面产业政策法案，对抗中国；贝佐斯将飞往太空](/articles/nyt/1046763.md)
@@ -596,8 +600,4 @@
 3-23 [从“德企之乡“太仓看中德经济联系和隐忧](/articles/nyt/1047058.md)
 
 3-23 [简报：多国因新疆问题制裁中国；科罗拉多枪击案多人死亡](/articles/nyt/1047059.md)
-
-3-22 [精英亚裔，成功和地位无法让你们免于仇恨和歧视](/articles/nyt/1047060.md)
-
-3-22 [拜登先生，别再对中国“放狠话”了](/articles/nyt/1047061.md)
 
