--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-8 [韩国地方法院案驳回原劳工对日企起诉](/articles/rfi/1028373.md)
+
+6-8 [巴基斯坦火车相撞 增至63死 – 法国国际广播电台 - RFI](/articles/rfi/1028374.md)
+
+6-8 [美国军机起降台湾 中国官方不吭声引网上嘲讽](/articles/rfi/1028375.md)
+
 6-8 [苹果的隐私保护新功能因监管原因在中国将不可用](/articles/rfi/1028376.md)
 
 6-8 [中共百年庆祝 天安门广场周末禁封排练](/articles/rfi/1028377.md)
@@ -594,10 +600,4 @@
 6-3 [绿色和平：鱼粉鱼油大量出口威胁西非食品供应 - 今日经济](/articles/rfi/1028671.md)
 
 6-3 [独自行走! 法国夏天轻松远足的五个去处 - 法国风光](/articles/rfi/1028672.md)
-
-6-3 [斯里兰卡准备应对“漏油”灾难 印度提供支援](/articles/rfi/1028673.md)
-
-6-3 [印尼外海6.1浅层地震 尚无人员伤亡通报 – 法国国际广播电台 - RFI](/articles/rfi/1028674.md)
-
-6-3 [丹麦通过新法 将庇护申请者送到欧洲以外地区 – 法国国际广播电台 - RFI](/articles/rfi/1028675.md)
 
