--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-8 [生育“三难”如拦路虎 “三孩”政策难实施](/articles/voa/1040275.md)
+
+6-8 [拜登将出席七国集团和北约峰会 寻求美欧联合应对中国挑战](/articles/voa/1040276.md)
+
 6-8 [华尔街日报：美国国家实验室曾得出结论新冠病毒可能来自武汉实验室](/articles/voa/1040277.md)
 
 6-8 [打击北京盗窃美国科技 司法部“中国行动计划”首宗诉讼案开审](/articles/voa/1040278.md)
@@ -596,8 +600,4 @@
 5-25 [抵制冬奥呼声不断 北京会否步莫斯科后尘？](/articles/voa/1040573.md)
 
 5-25 [萨摩亚陷入宪政危机 结果将影响大国竞争 美国敦促各方尊重民主程序](/articles/voa/1040574.md)
-
-5-25 [台海冲突时韩国应怎么做？ 五角大楼：由韩国人自己决定](/articles/voa/1040575.md)
-
-5-25 [布林肯前往中东 在以色列-哈马斯停火基础上推动加沙重建](/articles/voa/1040576.md)
 
