--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-8 [浙江多间民办学院与职校合并  学生维权遭警察暴力对待](/articles/rfa/1045380.md)
+
 6-8 [美国务卿布林肯指台美正就经贸架构协定进行对话](/articles/rfa/1045381.md)
 
 6-8 [病毒溯源  布林肯要追究中国责任  特朗普提求偿十兆美元](/articles/rfa/1045382.md)
@@ -598,6 +600,4 @@
 5-5 [被指侵犯电视机用户私隐  中国创维停止传送后台数据](/articles/rfa/1045678.md)
 
 5-5 [才笑人就出包！长征五号火箭體残骸失控  南北纬40度内陷危机](/articles/rfa/1045679.md)
-
-5-5 [美国印太事务官坎贝尔主张维持“战略模糊”](/articles/rfa/1045680.md)
 
