--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-8 [经济遭受重创之际，朝鲜领导人金正恩与高级顾问谈“实质变革”](/articles/voa/1040272.md)
+
+6-8 [针对中国不公平贸易行为 美国设立贸易“纠察队”](/articles/voa/1040273.md)
+
+6-8 [美前高官：中国制裁欧盟是“巨大战略错误”](/articles/voa/1040274.md)
+
 6-8 [生育“三难”如拦路虎 “三孩”政策难实施](/articles/voa/1040275.md)
 
 6-8 [拜登将出席七国集团和北约峰会 寻求美欧联合应对中国挑战](/articles/voa/1040276.md)
@@ -594,10 +600,4 @@
 5-25 [美动作片“速度与激情9”主演因称台湾为国家而被迫道歉](/articles/voa/1040570.md)
 
 5-25 [中国批维吾尔法庭抹黑新疆，世维会：为维族人提供公正审判](/articles/voa/1040571.md)
-
-5-25 [赛格大厦接连晃惊动广东官员 安民告示：“大楼结构整体性能满足要求”](/articles/voa/1040572.md)
-
-5-25 [抵制冬奥呼声不断 北京会否步莫斯科后尘？](/articles/voa/1040573.md)
-
-5-25 [萨摩亚陷入宪政危机 结果将影响大国竞争 美国敦促各方尊重民主程序](/articles/voa/1040574.md)
 
