--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+6-8 [高温下抗争者被关押于”蒸炉”囚室   港府拒绝改善收押所环境](/articles/rfa/1045378.md)
+
+6-8 [习近平武统台湾顾忌台积电？](/articles/rfa/1045379.md)
+
 6-8 [浙江多间民办学院与职校合并  学生维权遭警察暴力对待](/articles/rfa/1045380.md)
 
 6-8 [美国务卿布林肯指台美正就经贸架构协定进行对话](/articles/rfa/1045381.md)
@@ -596,8 +600,4 @@
 5-6 [中国影响渗透加拿大学术界  加拿大官方提出警告](/articles/rfa/1045676.md)
 
 5-5 [印度台商捐15台储氧槽   驻台代表：印度有决心抗疫](/articles/rfa/1045677.md)
-
-5-5 [被指侵犯电视机用户私隐  中国创维停止传送后台数据](/articles/rfa/1045678.md)
-
-5-5 [才笑人就出包！长征五号火箭體残骸失控  南北纬40度内陷危机](/articles/rfa/1045679.md)
 
