--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-8 [哲学人｜张鸣：我们这一代最大的负资产，就是那个十年的洗礼](/articles/cdt/381626.md)
+
 6-8 [【立此存照】加速真的太快了～连环球时报都刹不住车了](/articles/cdt/381643.md)
 
 6-8 [念念回声 ｜南大招生广告惹众怒背后，女性的全方位焦虑即将爆炸](/articles/cdt/381645.md)
@@ -598,6 +600,4 @@
 5-4 [三联生活周刊 | 15岁到28岁，我的黄金时代都在工厂流水线上](/articles/cdt/382990.md)
 
 5-4 [科技日报 | 被体检否决的残障海归硕士：为什么我不能当老师？](/articles/cdt/382991.md)
-
-5-3 [极昼工作室｜租来的伴娘](/articles/cdt/382996.md)
 
