--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-9 [拿破仑？又是他！ - 特别节目](/articles/rfi/1028345.md)
+
+6-9 [世界排名85女将齐丹塞珂闯进法网四强 – 法国国际广播电台 - RFI](/articles/rfi/1028346.md)
+
 6-8 [英国女子走路返家遇害案 涉案警员坦承犯案 – 法国国际广播电台 - RFI](/articles/rfi/1028347.md)
 
 6-8 [疫情趋缓 苹果要员工回公司上班引发反弹 – 法国国际广播电台 - RFI](/articles/rfi/1028348.md)
@@ -596,8 +600,4 @@
 6-4 [美国将送出8000万剂新冠疫苗 薛瑞福呼吁优先发送给台湾](/articles/rfi/1028643.md)
 
 6-4 [六四两个字 - 要闻分析](/articles/rfi/1028644.md)
-
-6-4 [张维为给政治局上课 可忧可忧？](/articles/rfi/1028645.md)
-
-6-4 [缅甸动荡 ICRC、东协特使陆续会军头 – 法国国际广播电台 - RFI](/articles/rfi/1028646.md)
 
