--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-9 [美国之音｜专访媒体研究学者林慕莲谈中国重塑世界媒体](/articles/cdt/381621.md)
+
 6-8 [哲学人｜张鸣：我们这一代最大的负资产，就是那个十年的洗礼](/articles/cdt/381626.md)
 
 6-8 [【立此存照】加速真的太快了～连环球时报都刹不住车了](/articles/cdt/381643.md)
@@ -598,6 +600,4 @@
 5-4 [回声｜人口普查数据推迟公布背后：女权主义不为生育率下降“背锅”](/articles/cdt/382981.md)
 
 5-4 [三联生活周刊 | 15岁到28岁，我的黄金时代都在工厂流水线上](/articles/cdt/382990.md)
-
-5-4 [科技日报 | 被体检否决的残障海归硕士：为什么我不能当老师？](/articles/cdt/382991.md)
 
