--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-9 [跨国议会联盟发起抵制北京冬奥行动](/articles/rfa/1045376.md)
+
 6-8 [日本外相称“台湾国内”   对台定位出现变化？](/articles/rfa/1045377.md)
 
 6-8 [高温下抗争者被关押于”蒸炉”囚室   港府拒绝改善收押所环境](/articles/rfa/1045378.md)
@@ -598,6 +600,4 @@
 5-6 [因探望江天勇 多人被盘查   邢望力被行拘](/articles/rfa/1045674.md)
 
 5-6 [欧盟: 批准欧中投资协定取决于政治形势发展](/articles/rfa/1045675.md)
-
-5-6 [中国影响渗透加拿大学术界  加拿大官方提出警告](/articles/rfa/1045676.md)
 
