--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-9 [博明建议国会成立跨党派委员会追查新冠源头](/articles/voa/1040262.md)
+
+6-9 [罗马尼亚议会批准新法 可能将华为排除在其5G网络之外](/articles/voa/1040263.md)
+
 6-9 [时事大家谈: 呼声四起措施频出，中国三胎生得下来吗？](/articles/voa/1040264.md)
 
 6-9 [布林肯对一份新冠病毒可能由实验室泄露的报告的研究方法表示存疑](/articles/voa/1040265.md)
@@ -596,8 +600,4 @@
 5-26 [布林肯宣布对加沙地带提供新的灾难救助](/articles/voa/1040560.md)
 
 5-26 [白宫：美国周二达到疫苗接种里程碑](/articles/voa/1040561.md)
-
-5-26 [时事大家谈: 投资协定冻结 立陶宛“退群”，中欧关系断崖式下滑？](/articles/voa/1040562.md)
-
-5-26 [香港支联会与警方商讨六四烛光集会 续争取港人合法悼念权利](/articles/voa/1040563.md)
 
