--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-9 [支持香港人民：加拿大为港人申请枫叶卡开通两项新途径](/articles/voa/1040260.md)
+
+6-9 [“波斯尼亚屠夫”姆拉迪奇上诉遭驳回，联合国法庭维持终身监禁原判](/articles/voa/1040261.md)
+
 6-9 [博明建议国会成立跨党派委员会追查新冠源头](/articles/voa/1040262.md)
 
 6-9 [罗马尼亚议会批准新法 可能将华为排除在其5G网络之外](/articles/voa/1040263.md)
@@ -596,8 +600,4 @@
 5-26 [布林肯抵耶路撒冷 推动以巴和平、加沙重建](/articles/voa/1040558.md)
 
 5-26 [加拿大艾伯塔省要求大学审查与中共实体的合作](/articles/voa/1040559.md)
-
-5-26 [布林肯宣布对加沙地带提供新的灾难救助](/articles/voa/1040560.md)
-
-5-26 [白宫：美国周二达到疫苗接种里程碑](/articles/voa/1040561.md)
 
