--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,18 @@
 路透
 ------
 
+6-9 [金价因美元走强而下跌 市场等待美国通胀数据](/articles/reuters/1037112.md)
+
+6-9 [美国务卿布林肯质疑新冠病毒可能来自武汉实验室的报告的研究方法](/articles/reuters/1037113.md)
+
+6-9 [美国CDC放宽对包括日本在内110多个国家和地区的旅行建议 对中国限制不变](/articles/reuters/1037114.md)
+
+6-9 [中国和东盟同意避免在南海采取挑衅性行动--东盟声明](/articles/reuters/1037115.md)
+
+6-9 [中国国防部：美议员搭军机访台是“非常恶劣的政治挑衅” 对此表示坚决反对](/articles/reuters/1037116.md)
+
+6-9 [路透测算的人民币中间价料开在6.398元附近 较上日贬71点](/articles/reuters/1037117.md)
+
 6-8 [王毅称中国过去、现在和将来都支持缅甸自主选择符合本国国情的发展道路](/articles/reuters/1037118.md)
 
 6-8 [多个社交媒体和新闻网站遭遇重大网络故障](/articles/reuters/1037119.md)
@@ -588,16 +600,4 @@
 6-1 [发达国家央行落后于通胀曲线 将对新兴市场构成威胁--巴西央行总裁](/articles/reuters/1037410.md)
 
 6-1 [波兰法庭开始审理涉及华为的中国间谍案](/articles/reuters/1037411.md)
-
-6-1 [制定大流行国际条约的 “时机已到”--WHO总干事谭德塞](/articles/reuters/1037412.md)
-
-6-1 [中国5月百城均价新建住宅环比上涨0.34% 同比上涨4.08--中指院](/articles/reuters/1037413.md)
-
-6-1 [财新中国5月制造业PMI升至52.0创五个月新高 新出口订单创半年高点](/articles/reuters/1037414.md)
-
-6-1 [中国大陆新增23例确诊本土11例均在广东 新增无症状感染者15例](/articles/reuters/1037415.md)
-
-6-1 [新冠疫苗专利豁免 即便美国答应了也还是有很多反对声](/articles/reuters/1037416.md)
-
-6-1 [中国副外长希望在华美企“理直气壮”讲好合作故事 迪士尼回应愿扩大在华投资](/articles/reuters/1037417.md)
 
