--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,18 @@
 金融时报
 ------
 
+6-9 [解密通胀谜题系列：关于通胀的两个常见误区](/articles/ft/1045495.md)
+
+6-9 [独角兽时代公司治理制度安排的挑战](/articles/ft/1045496.md)
+
+6-9 [如何在投资中控制自己？](/articles/ft/1045497.md)
+
+6-9 [继续看好经济重启与复苏受益板块](/articles/ft/1045498.md)
+
+6-9 [孟子“性善”说的理论失误及消极影响](/articles/ft/1045499.md)
+
+6-9 [大宗商品上涨的蝴蝶效应](/articles/ft/1045500.md)
+
 6-8 [行业领袖：欧洲或在脱碳方面落后于中美](/articles/ft/1045501.md)
 
 6-8 [贝索斯卸任后将进行太空旅行](/articles/ft/1045502.md)
@@ -588,16 +600,4 @@
 4-7 [既忧收缩，何虑通胀？](/articles/ft/1045793.md)
 
 4-6 [朝鲜退出东京奥运会](/articles/ft/1045794.md)
-
-4-6 [十四五：如何跨过中国宏观经济新周期](/articles/ft/1045795.md)
-
-4-6 [中美关系：广义资本流动视角](/articles/ft/1045796.md)
-
-4-6 [《哥斯拉大战金刚》为好莱坞带来希望](/articles/ft/1045797.md)
-
-4-6 [互联网“提费降速”为什么会是拜登就业岗位刺激计划的核心一环](/articles/ft/1045798.md)
-
-4-6 [中概股的交易所风云](/articles/ft/1045799.md)
-
-4-2 [台湾列车脱轨 造成数十人死亡](/articles/ft/1045800.md)
 
