--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-9 [美印太事务协调官透露抗中新战略](/articles/dw/1042035.md)
+
 6-9 [美参院通过抗中法案 白宫对抗不公平贸易行为](/articles/dw/1042036.md)
 
 6-9 [德语媒体： 竞争压力催生‘躺平’哲学](/articles/dw/1042037.md)
@@ -598,6 +600,4 @@
 5-22 [德语媒体：让步的苹果与衰老的中国](/articles/dw/1042333.md)
 
 5-22 [多次称“中国病毒” 特朗普遭华裔民权联盟控告](/articles/dw/1042334.md)
-
-5-22 [英国航母即将前往亚洲 约翰逊: 绝非要对抗中国](/articles/dw/1042335.md)
 
