--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-9 [通胀担忧蔓延全球，中国采取措施平抑物价](/articles/nyt/1046757.md)
+
 6-9 [科兴称中国已批准其疫苗用于三岁以上儿童](/articles/nyt/1046758.md)
 
 6-9 [简报：习近平的舆论斗争“药方”；中国试图平抑物价防通胀](/articles/nyt/1046759.md)
@@ -598,6 +600,4 @@
 3-23 [选举制度改革后，香港民主还有希望吗？](/articles/nyt/1047055.md)
 
 3-23 [按摩院里的女性，被边缘化的亚裔](/articles/nyt/1047056.md)
-
-3-23 [美国欧盟等因新疆问题制裁中国，中国反制](/articles/nyt/1047057.md)
 
