--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+6-9 [美国富豪为什么喜欢做慈善？（一）](/articles/ft/1045494.md)
+
 6-9 [解密通胀谜题系列：关于通胀的两个常见误区](/articles/ft/1045495.md)
 
 6-9 [独角兽时代公司治理制度安排的挑战](/articles/ft/1045496.md)
@@ -598,6 +600,4 @@
 4-7 [中概股回归的币种选择](/articles/ft/1045792.md)
 
 4-7 [既忧收缩，何虑通胀？](/articles/ft/1045793.md)
-
-4-6 [朝鲜退出东京奥运会](/articles/ft/1045794.md)
 
