--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-9 [缺乏指标交易清淡 美股大致收平 – 法国国际广播电台 - RFI](/articles/rfi/1028332.md)
+
 6-9 [市场观望 港股开低 – 法国国际广播电台 - RFI](/articles/rfi/1028333.md)
 
 6-9 [缺乏指标 日股开低 – 法国国际广播电台 - RFI](/articles/rfi/1028334.md)
@@ -598,6 +600,4 @@
 6-4 [法国热门食材——大黄茎秆 - 法国美食](/articles/rfi/1028630.md)
 
 6-4 [六四：中共忙庆百年 天安门记忆阴影萦绕难消](/articles/rfi/1028631.md)
-
-6-4 [香港“重兵”戒备六四！穿黑衣、点烛光都恐被捕 维园遭禁封](/articles/rfi/1028632.md)
 
