--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-9 [疫情下办奥运 日本为志工和记者接种疫苗](/articles/dw/1042033.md)
+
+6-9 [美报告称实验室外泄假设可信 布林肯质疑研究方法](/articles/dw/1042034.md)
+
 6-9 [美印太事务协调官透露抗中新战略](/articles/dw/1042035.md)
 
 6-9 [美参院通过抗中法案 白宫对抗不公平贸易行为](/articles/dw/1042036.md)
@@ -596,8 +600,4 @@
 5-23 [打破藩籬：台湾原住民歌者桑梅絹](/articles/dw/1042331.md)
 
 5-22 [中国副总理刘鹤仕途引关注](/articles/dw/1042332.md)
-
-5-22 [德语媒体：让步的苹果与衰老的中国](/articles/dw/1042333.md)
-
-5-22 [多次称“中国病毒” 特朗普遭华裔民权联盟控告](/articles/dw/1042334.md)
 
