--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-9 [五角大楼报告：中国主导战略和关键物资全球供应链对美国风险大](/articles/voa/1040250.md)
+
+6-9 [“来自美国的爱” 美议员呼吁提供台湾更多疫苗](/articles/voa/1040251.md)
+
 6-9 [美参议院公布国会冲击案报告，强调情报和安保疏失](/articles/voa/1040252.md)
 
 6-9 [“战狼外交”深植中共 马丁：中国外交官更多的是吓人，不是可爱](/articles/voa/1040253.md)
@@ -596,8 +600,4 @@
 5-26 [五角大楼称仍在寻找与中国军方高层对话的适当方式](/articles/voa/1040548.md)
 
 5-26 [歧视仇恨剧增 亚太裔传统月专注增进了解](/articles/voa/1040549.md)
-
-5-26 [美国华裔女性拉比第一人细说从头](/articles/voa/1040550.md)
-
-5-26 [台湾参加世卫大会再受阻，美日加英澳会中发声齐挺台](/articles/voa/1040551.md)
 
