--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-9 [馬克龍親民握手卻遭「打臉」](/articles/dw/1042032.md)
+
 6-9 [疫情下办奥运 日本为志工和记者接种疫苗](/articles/dw/1042033.md)
 
 6-9 [美报告称实验室外泄假设可信 布林肯质疑研究方法](/articles/dw/1042034.md)
@@ -598,6 +600,4 @@
 5-23 [七张图看一周大事](/articles/dw/1042330.md)
 
 5-23 [打破藩籬：台湾原住民歌者桑梅絹](/articles/dw/1042331.md)
-
-5-22 [中国副总理刘鹤仕途引关注](/articles/dw/1042332.md)
 
