--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+6-9 [分析：应对气候变化成各央行控制通胀新难点 动作快慢是个问题](/articles/reuters/1037076.md)
+
+6-9 [预测2021年全球GDP增速5.5% 美国率先超越疫情前增长轨道--裕利安宜](/articles/reuters/1037077.md)
+
 6-9 [美参议院通过创新和竞争法案 中国全国人大敦促“立即停止推进审议”](/articles/reuters/1037078.md)
 
 6-9 [研究显示在新冠疫情爆发前 武汉有近5万头活体野生动物出售](/articles/reuters/1037079.md)
@@ -596,8 +600,4 @@
 6-2 [独家：外交官称欧盟将在经济制裁前把白俄罗斯航空列入黑名单](/articles/reuters/1037374.md)
 
 6-2 [克里姆林宫乐见美国决定不对北溪2号进行制裁--Ifax](/articles/reuters/1037375.md)
-
-6-2 [白宫回应丹麦有关美国间谍活动的报导 称将与盟友合作解决问题](/articles/reuters/1037376.md)
-
-6-2 [中国外长：金砖国家应推动各方政治解决巴以冲突、伊核协议等热点问题](/articles/reuters/1037377.md)
 
