--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-9 [“银发复兴”：成为网络时尚红人的韩国奶奶们](/articles/nyt/1046754.md)
+
 6-9 [在家吃回转寿司：疫情期间日本寿司店出租传送带](/articles/nyt/1046755.md)
 
 6-9 [袭击阴影下，难以恢复正常生活的美国亚裔](/articles/nyt/1046756.md)
@@ -598,6 +600,4 @@
 3-24 [肛拭子、隔离和中国疫苗：为何外国人入境中国如此困难](/articles/nyt/1047052.md)
 
 3-24 [如何代表亚裔美国人？杨安泽竞选纽约市长面临考验](/articles/nyt/1047053.md)
-
-3-24 [简报：美国一周内两起大规模枪案；阿斯利康疫苗再陷争议](/articles/nyt/1047054.md)
 
