--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-9 [百年党庆逼近 维稳无分左右 毛左阵营传遭公安跨省抓捕](/articles/rfa/1045370.md)
+
 6-9 [白宫重整供应链计划出台       针对中国成立贸易“纠察队”](/articles/rfa/1045371.md)
 
 6-9 [异议人士王爱忠妻子被停职  辽宁访民刘纯宝去世](/articles/rfa/1045372.md)
@@ -598,6 +600,4 @@
 5-6 [G7外长会议公报首度提及台湾 强调台海和平稳定](/articles/rfa/1045668.md)
 
 5-6 [张向晨出任WTO副总干事     美中继续角力国际组织](/articles/rfa/1045669.md)
-
-5-6 [恶俗维基案牛腾宇近两年来首次见母亲](/articles/rfa/1045670.md)
 
