--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-9 [【敏感词库】百度贴吧敏感词：吸精瓶、西晋平、刑平等](/articles/cdt/381604.md)
+
 6-9 [【网络民议】警情通报：南师大一院长被学生非法扣留  网友：百名警力理智的使用辣椒水](/articles/cdt/381607.md)
 
 6-9 [自由亚洲 | 江浙多间民办学院与职校合并  学生维权遭警察暴力对待](/articles/cdt/381611.md)
@@ -598,6 +600,4 @@
 5-5 [【CDT推荐】本周推荐媒体](/articles/cdt/382962.md)
 
 5-5 [美国之音 | 世界新闻自由日：中国被评为新闻和言论自由的最大敌人](/articles/cdt/382964.md)
-
-5-5 [德国之声 | 长平观察：“胡锡进这种人比敌人更加有害！”](/articles/cdt/382967.md)
 
