--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-9 [为中共建党百年献礼 第五代导演率先奏响官方主旋律](/articles/voa/1040248.md)
+
 6-9 [美副防长：新财年国防预算为应对中国威胁提供适当资源](/articles/voa/1040249.md)
 
 6-9 [五角大楼报告：中国主导战略和关键物资全球供应链对美国风险大](/articles/voa/1040250.md)
@@ -598,6 +600,4 @@
 5-26 [五角大楼担忧阿联酋与中国加深军事关系 但暂不取消F-35军售计划](/articles/voa/1040546.md)
 
 5-26 [美国众议院民主党领导人提出法案全面反制中国挑战](/articles/voa/1040547.md)
-
-5-26 [五角大楼称仍在寻找与中国军方高层对话的适当方式](/articles/voa/1040548.md)
 
