--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-9 [BBC｜苹果iOS15：最新隐私保护功能无法在中国使用](/articles/cdt/381595.md)
+
 6-9 [【敏感词库】百度贴吧敏感词：吸精瓶、西晋平、刑平等](/articles/cdt/381604.md)
 
 6-9 [【网络民议】警情通报：南师大一院长被学生非法扣留  网友：百名警力理智的使用辣椒水](/articles/cdt/381607.md)
@@ -598,6 +600,4 @@
 5-5 [上观新闻｜成都惊现“宠物盲盒”160余只动物中4只死亡 中通致歉](/articles/cdt/382961.md)
 
 5-5 [【CDT推荐】本周推荐媒体](/articles/cdt/382962.md)
-
-5-5 [美国之音 | 世界新闻自由日：中国被评为新闻和言论自由的最大敌人](/articles/cdt/382964.md)
 
