--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-9 [全球疫情确诊逾1亿7390万例 超过375万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1028311.md)
+
+6-9 [亚股跌多涨少 – 法国国际广播电台 - RFI](/articles/rfi/1028312.md)
+
 6-9 [世界银行：后疫情时代，全球复苏强劲却不均衡 - 今日经济](/articles/rfi/1028313.md)
 
 6-9 [日本向台湾赠送阿斯利康疫苗的负面效应 - 东京专栏](/articles/rfi/1028314.md)
@@ -596,8 +600,4 @@
 6-4 [日本捐赠124万剂AZ疫苗今运抵台湾](/articles/rfi/1028609.md)
 
 6-4 [狮子山观光景点将盖中资渔港 民众忧破坏环境 – 法国国际广播电台 - RFI](/articles/rfi/1028610.md)
-
-6-4 [王军涛：他们熄灭香港维园烛光时，人们心中的烛光将会点得更亮 - 要闻解说](/articles/rfi/1028611.md)
-
-6-4 [法媒高度关注六四周年纪念日与香港 - 法国报纸摘要](/articles/rfi/1028612.md)
 
