--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+6-9 [美国创新和竞争法案势在必行 北京呛把中国当“假想敌” - 要闻解说](/articles/rfi/1028308.md)
+
+6-9 [萨尔瓦通过法案 让比特币成法定货币 – 法国国际广播电台 - RFI](/articles/rfi/1028309.md)
+
+6-9 [捷克女将卡雷茨科娃击败美国17岁小将高夫 闯进法网4强 – 法国国际广播电台 - RFI](/articles/rfi/1028310.md)
+
 6-9 [全球疫情确诊逾1亿7390万例 超过375万人病殁 – 法国国际广播电台 - RFI](/articles/rfi/1028311.md)
 
 6-9 [亚股跌多涨少 – 法国国际广播电台 - RFI](/articles/rfi/1028312.md)
@@ -594,10 +600,4 @@
 6-4 [美央行紧缩疑虑加深 亚股跌多涨少 – 法国国际广播电台 - RFI](/articles/rfi/1028606.md)
 
 6-4 [应对外国操纵舆论 法国政府出台应对措施](/articles/rfi/1028607.md)
-
-6-4 [美国将勒索软件攻击视如恐怖主义](/articles/rfi/1028608.md)
-
-6-4 [日本捐赠124万剂AZ疫苗今运抵台湾](/articles/rfi/1028609.md)
-
-6-4 [狮子山观光景点将盖中资渔港 民众忧破坏环境 – 法国国际广播电台 - RFI](/articles/rfi/1028610.md)
 
