--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-9 [六四敏感期爆学潮 江浙大学生抗议文凭贬值](/articles/voa/1040245.md)
+
+6-9 [日本澳大利亚外交与国防部长2+2会谈 声明首度关切台海和平](/articles/voa/1040246.md)
+
+6-9 [澳大利亚总理呼吁七国集团和世贸组织惩处中国经济胁迫](/articles/voa/1040247.md)
+
 6-9 [为中共建党百年献礼 第五代导演率先奏响官方主旋律](/articles/voa/1040248.md)
 
 6-9 [美副防长：新财年国防预算为应对中国威胁提供适当资源](/articles/voa/1040249.md)
@@ -594,10 +600,4 @@
 5-26 [面对疫苗短缺和向中国购买疫苗压力 蔡英文批中国妨碍台湾向原厂洽购疫苗](/articles/voa/1040543.md)
 
 5-26 [多位甘肃山地马拉松遇难者家属拒签赔偿协议](/articles/voa/1040544.md)
-
-5-26 [上市案受投资人追捧 京东物流营运前景却难乐观](/articles/voa/1040545.md)
-
-5-26 [五角大楼担忧阿联酋与中国加深军事关系 但暂不取消F-35军售计划](/articles/voa/1040546.md)
-
-5-26 [美国众议院民主党领导人提出法案全面反制中国挑战](/articles/voa/1040547.md)
 
