--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-9 [【404文库】现代聊斋｜覆蛋完卵 造成语的反](/articles/cdt/381591.md)
+
+6-9 [中产生活观察｜逃命的大象是如何成为宣传工具的](/articles/cdt/381593.md)
+
 6-9 [BBC｜苹果iOS15：最新隐私保护功能无法在中国使用](/articles/cdt/381595.md)
 
 6-9 [【敏感词库】百度贴吧敏感词：吸精瓶、西晋平、刑平等](/articles/cdt/381604.md)
@@ -596,8 +600,4 @@
 5-5 [现代聊斋余少镭｜大宋王朝的“五四青年”，到底打了谁的脸](/articles/cdt/382952.md)
 
 5-5 [【网络民议】丁太升为印度疫情发声遭炸号  网友：错在说了人话](/articles/cdt/382956.md)
-
-5-5 [上观新闻｜成都惊现“宠物盲盒”160余只动物中4只死亡 中通致歉](/articles/cdt/382961.md)
-
-5-5 [【CDT推荐】本周推荐媒体](/articles/cdt/382962.md)
 
