--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-10 [东京奥运前 印度奥运协会解除与李宁公司官方合作伙伴关系](/articles/voa/1040243.md)
+
+6-10 [中国通胀压力大 PPI指数5月高位增长直逼13年最高点](/articles/voa/1040244.md)
+
 6-9 [六四敏感期爆学潮 江浙大学生抗议文凭贬值](/articles/voa/1040245.md)
 
 6-9 [日本澳大利亚外交与国防部长2+2会谈 声明首度关切台海和平](/articles/voa/1040246.md)
@@ -596,8 +600,4 @@
 5-27 [澳籍华裔作家杨恒均的信件庭审前夕公开 称健康恶化但没有恐惧](/articles/voa/1040541.md)
 
 5-26 [新冠源头调查再引争议 中国媒体辱骂白宫专家弗契是“小人”](/articles/voa/1040542.md)
-
-5-26 [面对疫苗短缺和向中国购买疫苗压力 蔡英文批中国妨碍台湾向原厂洽购疫苗](/articles/voa/1040543.md)
-
-5-26 [多位甘肃山地马拉松遇难者家属拒签赔偿协议](/articles/voa/1040544.md)
 
