--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-10 [白宫取消特朗普总统禁止抖音和微信的行政命令](/articles/voa/1040241.md)
+
+6-10 [美制裁华为力度加大 摩根大通将其债券剔出投资指数](/articles/voa/1040242.md)
+
 6-10 [东京奥运前 印度奥运协会解除与李宁公司官方合作伙伴关系](/articles/voa/1040243.md)
 
 6-10 [中国通胀压力大 PPI指数5月高位增长直逼13年最高点](/articles/voa/1040244.md)
@@ -596,8 +600,4 @@
 5-27 [中国9省79条河流超警 引发去年洪灾再现担忧](/articles/voa/1040539.md)
 
 5-27 [华裔团体告特朗普“中国病毒”说，美华人圈反应不一](/articles/voa/1040540.md)
-
-5-27 [澳籍华裔作家杨恒均的信件庭审前夕公开 称健康恶化但没有恐惧](/articles/voa/1040541.md)
-
-5-26 [新冠源头调查再引争议 中国媒体辱骂白宫专家弗契是“小人”](/articles/voa/1040542.md)
 
