--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-10 [加拿大宣布新救生艇管道  进一步协助港人移民](/articles/rfa/1045363.md)
+
 6-10 [疫情下广东风声鹤唳 严厉执法压制言论](/articles/rfa/1045364.md)
 
 6-10 [中国大V日本交流遭网民批叛国  外交部罕见“灭火”](/articles/rfa/1045365.md)
@@ -598,6 +600,4 @@
 5-7 [将中国留学生比作狗   是侮辱还是过分解读？](/articles/rfa/1045661.md)
 
 5-7 [“对话中国”等海外团体启动“拉清单”项目   收集中共作恶官员信息](/articles/rfa/1045662.md)
-
-5-7 [七国集团公报批评中国   表明涉疆藏港台立场](/articles/rfa/1045663.md)
 
