--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-10 [匈牙利三度否决涉港声明  德国要求欧盟取消一票否决权制](/articles/rfa/1045362.md)
+
 6-10 [加拿大宣布新救生艇管道  进一步协助港人移民](/articles/rfa/1045363.md)
 
 6-10 [疫情下广东风声鹤唳 严厉执法压制言论](/articles/rfa/1045364.md)
@@ -598,6 +600,4 @@
 5-7 [医生曝肿瘤治疗黑幕   网友说比李文亮还伟大](/articles/rfa/1045660.md)
 
 5-7 [将中国留学生比作狗   是侮辱还是过分解读？](/articles/rfa/1045661.md)
-
-5-7 [“对话中国”等海外团体启动“拉清单”项目   收集中共作恶官员信息](/articles/rfa/1045662.md)
 
