--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-10 [阿尔巴尼亚议会弹劾总统](/articles/voa/1040238.md)
+
+6-10 [时事大家谈: 欧盟涉华议案再被一票否决，中国当喜当忧？](/articles/voa/1040239.md)
+
 6-10 [保护记者委员会呼吁中国政府立即释放吕耿松](/articles/voa/1040240.md)
 
 6-10 [白宫取消特朗普总统禁止抖音和微信的行政命令](/articles/voa/1040241.md)
@@ -596,8 +600,4 @@
 5-27 [拜登总统要求美情报界收集分析新冠病毒起源信息的声明(全文翻译）](/articles/voa/1040536.md)
 
 5-27 [加州发生枪击案 八人死亡 多人受伤](/articles/voa/1040537.md)
-
-5-27 [报复美国制裁中国侵权官员 中国禁止美国宗教领袖入境](/articles/voa/1040538.md)
-
-5-27 [中国9省79条河流超警 引发去年洪灾再现担忧](/articles/voa/1040539.md)
 
