--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-10 [“中共病毒”雕塑背后的故事](/articles/rfa/1045361.md)
+
 6-10 [匈牙利三度否决涉港声明  德国要求欧盟取消一票否决权制](/articles/rfa/1045362.md)
 
 6-10 [加拿大宣布新救生艇管道  进一步协助港人移民](/articles/rfa/1045363.md)
@@ -598,6 +600,4 @@
 5-7 [美国支持豁免新冠疫苗专利保护  谁是最大获利者？](/articles/rfa/1045659.md)
 
 5-7 [医生曝肿瘤治疗黑幕   网友说比李文亮还伟大](/articles/rfa/1045660.md)
-
-5-7 [将中国留学生比作狗   是侮辱还是过分解读？](/articles/rfa/1045661.md)
 
