--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+6-10 [南京大学低俗招生广告引物化女性的批评](/articles/rfa/1045358.md)
+
+6-10 [美参院通过《创新竞争法案》    中国强烈不满](/articles/rfa/1045359.md)
+
+6-10 [美官员：美将联合盟友在国际场合反制中国](/articles/rfa/1045360.md)
+
 6-10 [“中共病毒”雕塑背后的故事](/articles/rfa/1045361.md)
 
 6-10 [匈牙利三度否决涉港声明  德国要求欧盟取消一票否决权制](/articles/rfa/1045362.md)
@@ -594,10 +600,4 @@
 5-7 [表扬西方医疗福利     中央党校教授遭小粉红批“崇洋媚外”](/articles/rfa/1045656.md)
 
 5-7 [台外交部长警告 : 中国准备对台发动最后攻击](/articles/rfa/1045657.md)
-
-5-7 [学者呼吁美国加快立法    制止中国种族灭绝暴行](/articles/rfa/1045658.md)
-
-5-7 [美国支持豁免新冠疫苗专利保护  谁是最大获利者？](/articles/rfa/1045659.md)
-
-5-7 [医生曝肿瘤治疗黑幕   网友说比李文亮还伟大](/articles/rfa/1045660.md)
 
