--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-10 [【404档案馆】内卷可以，躺平不行](/articles/cdt/381580.md)
+
+6-10 [【404档案馆】三胎政策，一个错别字为啥那么敏感？](/articles/cdt/381581.md)
+
 6-9 [【404文库】现代聊斋｜覆蛋完卵 造成语的反](/articles/cdt/381591.md)
 
 6-9 [中产生活观察｜逃命的大象是如何成为宣传工具的](/articles/cdt/381593.md)
@@ -596,8 +600,4 @@
 5-5 [【网络民议】青年们不在五四这天睡觉，难道要上街吗？](/articles/cdt/382938.md)
 
 5-6 [三联生活周刊｜内卷、985废物等标签背后：这届青年人在困惑什么？](/articles/cdt/382939.md)
-
-5-5 [现代聊斋余少镭｜大宋王朝的“五四青年”，到底打了谁的脸](/articles/cdt/382952.md)
-
-5-5 [【网络民议】丁太升为印度疫情发声遭炸号  网友：错在说了人话](/articles/cdt/382956.md)
 
