--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-10 [五角大楼展开行动 以更好地应对中国的挑战](/articles/voa/1040229.md)
+
+6-10 [拜登总统抵达欧洲，将与盟国和普京举行峰会](/articles/voa/1040230.md)
+
 6-10 [“战狼外交”深植中共 马丁：中国外交官更多的是吓人，不是可爱](/articles/voa/1040231.md)
 
 6-10 [美国防部长下达内部指令 展开多项行动抗衡中国](/articles/voa/1040232.md)
@@ -596,8 +600,4 @@
 5-27 [关于对特朗普的刑事调查有七点要知道的事](/articles/voa/1040527.md)
 
 5-27 [针对亚裔的仇恨事件在新冠疫情前就已有之](/articles/voa/1040528.md)
-
-5-27 [忧中国效仿白俄逼降客机 流亡港人与丹麦政界呼吁严惩以儆效尤](/articles/voa/1040529.md)
-
-5-27 [中国在巴以间放弃左右逢源，开始猛怼以色列](/articles/voa/1040530.md)
 
