--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+6-10 [简报：广州防疫多区封锁全员检测；拜登撤回特朗普对TikTok和微信禁令](/articles/nyt/1046751.md)
+
+6-10 [中国重新收紧限制措施应对新一轮疫情](/articles/nyt/1046752.md)
+
 6-9 [我们还能花着快销的钱，过着奢侈品的生活吗？](/articles/nyt/1046753.md)
 
 6-9 [“银发复兴”：成为网络时尚红人的韩国奶奶们](/articles/nyt/1046754.md)
@@ -596,8 +600,4 @@
 3-24 [我父母这代亚裔认为我们只能自保，我不这么想](/articles/nyt/1047049.md)
 
 3-24 [中国不再尊重美国，他们有理由这样做](/articles/nyt/1047050.md)
-
-3-24 [成年女性试穿优衣库童装引发身材羞辱争议](/articles/nyt/1047051.md)
-
-3-24 [肛拭子、隔离和中国疫苗：为何外国人入境中国如此困难](/articles/nyt/1047052.md)
 
