--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-10 [美联社：关于美国新冠溯源调查有六点要知道的事](/articles/voa/1040227.md)
+
+6-10 [拜登放过TikTok和WeChat？分析人士：事情还没完](/articles/voa/1040228.md)
+
 6-10 [五角大楼展开行动 以更好地应对中国的挑战](/articles/voa/1040229.md)
 
 6-10 [拜登总统抵达欧洲，将与盟国和普京举行峰会](/articles/voa/1040230.md)
@@ -596,8 +600,4 @@
 5-27 [武毒所再成新冠病毒溯源焦点 鲁比奥：不应排除任何可能性](/articles/voa/1040525.md)
 
 5-27 [台湾外交官：中国主导游戏规则使世卫组织成为其“守门者”](/articles/voa/1040526.md)
-
-5-27 [关于对特朗普的刑事调查有七点要知道的事](/articles/voa/1040527.md)
-
-5-27 [针对亚裔的仇恨事件在新冠疫情前就已有之](/articles/voa/1040528.md)
 
