--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+6-10 [躺平和内卷反映的中国社会问题](/articles/ft/1045488.md)
+
+6-10 [美国将捐赠5亿支新冠疫苗](/articles/ft/1045489.md)
+
 6-10 [重设全球经济下的税务底线](/articles/ft/1045490.md)
 
 6-10 [德国2021大选系列之三：大党式微](/articles/ft/1045491.md)
@@ -596,8 +600,4 @@
 4-8 [重返“世界中心”？沙特阿拉伯大手笔的文娱旅游业投资](/articles/ft/1045786.md)
 
 4-8 [简评拜登新政：“白衣骑士”还是“特洛伊木马”](/articles/ft/1045787.md)
-
-4-8 [特斯拉在华发展“困境”与破局方向](/articles/ft/1045788.md)
-
-4-7 [从政治人类学看世界永久和平问题](/articles/ft/1045789.md)
 
