--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-10 [新研究：武汉市场贩售动物可能携带传染人类病原体](/articles/nyt/1046750.md)
+
 6-10 [简报：广州防疫多区封锁全员检测；拜登撤回特朗普对TikTok和微信禁令](/articles/nyt/1046751.md)
 
 6-10 [中国重新收紧限制措施应对新一轮疫情](/articles/nyt/1046752.md)
@@ -598,6 +600,4 @@
 3-24 [科罗拉多枪击案幸存者：“听着他杀死所有你认识的人”](/articles/nyt/1047048.md)
 
 3-24 [我父母这代亚裔认为我们只能自保，我不这么想](/articles/nyt/1047049.md)
-
-3-24 [中国不再尊重美国，他们有理由这样做](/articles/nyt/1047050.md)
 
