--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,10 @@
 路透
 ------
 
+6-10 [人民币汇率的影响因素复杂 双向波动将成常态--央行副行长潘功胜](/articles/reuters/1037039.md)
+
+6-10 [中国利率水平适宜 应坚持稳字当头坚持实施正常货币政策--央行行长](/articles/reuters/1037040.md)
+
 6-10 [焦点：虽然经济复苏站稳脚跟 但欧洲央行料将保持资金闸门敞开](/articles/reuters/1037041.md)
 
 6-10 [中国紫金矿业全资子公司和中信金属将包销刚果(金)铜矿第一序列产量](/articles/reuters/1037042.md)
@@ -596,8 +600,4 @@
 6-3 [东京2020奥组委主席排除取消或再次推迟奥运会的可能--报导](/articles/reuters/1037337.md)
 
 6-3 [俄罗斯将退出旨在放宽美外交官在俄旅行限制的开放陆地谅解备忘录--副外长](/articles/reuters/1037338.md)
-
-6-3 [德国和俄罗斯针锋相对 两国间的航班一度暂停](/articles/reuters/1037339.md)
-
-6-3 [华为正式推出鸿蒙2.0操作系统 瞄准“物联网”市场](/articles/reuters/1037340.md)
 
