--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,7 +9,7 @@
 
 6-9 [【404文库】现代聊斋｜覆蛋完卵 造成语的反](/articles/cdt/381591.md)
 
-6-9 [中产生活观察｜逃命的大象是如何成为宣传工具的](/articles/cdt/381593.md)
+6-9 [【404文库】中产生活观察｜逃命的大象是如何成为宣传工具的](/articles/cdt/381593.md)
 
 6-9 [BBC｜苹果iOS15：最新隐私保护功能无法在中国使用](/articles/cdt/381595.md)
 
