--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+6-10 [中国将通过沪深港通等扩大QDII规模 有序推动少数不可兑换项目开放--央行副行长](/articles/reuters/1037036.md)
+
 6-10 [特斯拉将交付高端车型Model S Plaid 在豪华车市场抗衡奔驰和保时捷](/articles/reuters/1037037.md)
 
 6-10 [中国证监会主席详解热点：IPO发行没收紧没放松 对企业选择上市地持开放态度](/articles/reuters/1037038.md)
@@ -598,6 +600,4 @@
 6-3 [油价触及逾一年最高 受助于OPEC+维持计划不变和需求前景乐观](/articles/reuters/1037334.md)
 
 6-3 [美债收益率回落推动金价上涨 关注经济数据](/articles/reuters/1037335.md)
-
-6-3 [路透测算的人民币中间价料贬至6.3798元附近 市场供求趋于均衡](/articles/reuters/1037336.md)
 
