--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-10 [【异闻观止】周到上海｜心里有话对党说，中共一大纪念馆里多了一座“初心亭”](/articles/cdt/381570.md)
+
 6-10 [【404档案馆】内卷可以，躺平不行](/articles/cdt/381580.md)
 
 6-10 [【404档案馆】三胎政策，一个错别字为啥那么敏感？](/articles/cdt/381581.md)
@@ -598,6 +600,4 @@
 5-5 [【404文库】中式没品笑话百科｜这些“阴阳怪气”的话，是哪位“公知”说的？](/articles/cdt/382931.md)
 
 5-5 [【网络民议】青年们不在五四这天睡觉，难道要上街吗？](/articles/cdt/382938.md)
-
-5-6 [三联生活周刊｜内卷、985废物等标签背后：这届青年人在困惑什么？](/articles/cdt/382939.md)
 
