--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-10 [蒙古新冠病例激增，国药疫苗有效性再受质疑](/articles/nyt/1046747.md)
+
 6-10 [“三孩”政策来了，中国女性的身体仍然不属于自己](/articles/nyt/1046748.md)
 
 6-10 [拜登撤销特朗普TikTok、微信行政令，签署新审查令](/articles/nyt/1046749.md)
@@ -598,6 +600,4 @@
 3-25 [香港暂停接种复必泰新冠疫苗，发现包装瑕疵](/articles/nyt/1047045.md)
 
 3-25 [普京总统写真的艺术](/articles/nyt/1047046.md)
-
-3-25 [简报：H&M在中国遭抵制；香港暂停接种复必泰新冠疫苗](/articles/nyt/1047047.md)
 
