--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-10 [基本常识｜大象一路上访，控诉中药砂仁](/articles/cdt/381569.md)
+
 6-10 [【异闻观止】周到上海｜心里有话对党说，中共一大纪念馆里多了一座“初心亭”](/articles/cdt/381570.md)
 
 6-10 [【404档案馆】内卷可以，躺平不行](/articles/cdt/381580.md)
@@ -598,6 +600,4 @@
 5-6 [【CDT月度视频】2021年4月：不是我们对中国太吹毛求疵了，而是全世界都受够了](/articles/cdt/382925.md)
 
 5-5 [【404文库】中式没品笑话百科｜这些“阴阳怪气”的话，是哪位“公知”说的？](/articles/cdt/382931.md)
-
-5-5 [【网络民议】青年们不在五四这天睡觉，难道要上街吗？](/articles/cdt/382938.md)
 
