--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-10 [拜登任内首访欧洲，能否重振美欧联盟？](/articles/nyt/1046746.md)
+
 6-10 [蒙古新冠病例激增，国药疫苗有效性再受质疑](/articles/nyt/1046747.md)
 
 6-10 [“三孩”政策来了，中国女性的身体仍然不属于自己](/articles/nyt/1046748.md)
@@ -598,6 +600,4 @@
 3-25 [H&M因拒用新疆棉花在华遭抵制](/articles/nyt/1047044.md)
 
 3-25 [香港暂停接种复必泰新冠疫苗，发现包装瑕疵](/articles/nyt/1047045.md)
-
-3-25 [普京总统写真的艺术](/articles/nyt/1047046.md)
 
