--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-10 [昂山素季被控贪腐罪名](/articles/dw/1042010.md)
+
 6-10 [香港反送中两周年  在台抗争者：被蔡英文遗弃](/articles/dw/1042011.md)
 
 6-10 [维吾尔女子丧命看守所 北京遭批行人质政策](/articles/dw/1042012.md)
@@ -598,6 +600,4 @@
 5-24 [直擊意大利纜車墜地現場](/articles/dw/1042308.md)
 
 5-24 [台湾未获WHA邀请 吴钊燮：中国误导国际社会](/articles/dw/1042309.md)
-
-5-24 [受邀任嘉宾遭反对 罗冠聪批芝大中国学联“爱国流氓”](/articles/dw/1042310.md)
 
