--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-10 [快餐里的移民往事](/articles/nyt/1046745.md)
+
 6-10 [拜登任内首访欧洲，能否重振美欧联盟？](/articles/nyt/1046746.md)
 
 6-10 [蒙古新冠病例激增，国药疫苗有效性再受质疑](/articles/nyt/1046747.md)
@@ -598,6 +600,4 @@
 3-25 [非法石油是如何在中国的帮助下走私到朝鲜的？](/articles/nyt/1047043.md)
 
 3-25 [H&M因拒用新疆棉花在华遭抵制](/articles/nyt/1047044.md)
-
-3-25 [香港暂停接种复必泰新冠疫苗，发现包装瑕疵](/articles/nyt/1047045.md)
 
