--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-10 [【网络民议】每一次铁拳落下，或有人猛然觉醒，或有人继续沉睡](/articles/cdt/381567.md)
+
 6-10 [基本常识｜大象一路上访，控诉中药砂仁](/articles/cdt/381569.md)
 
 6-10 [【异闻观止】周到上海｜心里有话对党说，中共一大纪念馆里多了一座“初心亭”](/articles/cdt/381570.md)
@@ -598,6 +600,4 @@
 5-6 [BBC | 国安法下，香港公务员面临“爱国还是政治中立”的两难选择](/articles/cdt/382923.md)
 
 5-6 [【CDT月度视频】2021年4月：不是我们对中国太吹毛求疵了，而是全世界都受够了](/articles/cdt/382925.md)
-
-5-5 [【404文库】中式没品笑话百科｜这些“阴阳怪气”的话，是哪位“公知”说的？](/articles/cdt/382931.md)
 
