--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-6 [Photo: Untitled (Shanghai), by Hsiuan Boyen](/articles/cdt/0.md)
 
+6-10 [国有汪汪汪｜苏联计划生育失败史](/articles/cdt/381536.md)
+
 6-10 [黄章晋｜哎呀，我竟然两次被日本收买](/articles/cdt/381538.md)
 
 6-10 [【网络民议】每一次铁拳落下，或有人猛然觉醒，或有人继续沉睡](/articles/cdt/381567.md)
@@ -598,6 +600,4 @@
 5-6 [ABC｜中国宣布无限期暂停中澳战略经济对话机制下一切活动](/articles/cdt/382916.md)
 
 5-6 [平权在线 | 离婚在中国：制度约束及性别后果](/articles/cdt/382922.md)
-
-5-6 [BBC | 国安法下，香港公务员面临“爱国还是政治中立”的两难选择](/articles/cdt/382923.md)
 
