--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-10 [中国严打加密货币洗钱逮捕一千多名嫌犯](/articles/voa/1040219.md)
+
 6-10 [美国半导体制造强国产业政策迈出重要一步](/articles/voa/1040220.md)
 
 6-10 [美中贸易分歧扩大，拜登政府或重启美台贸易谈判](/articles/voa/1040221.md)
@@ -598,6 +600,4 @@
 5-27 [澳大利亚维州再次宣布封城，欧洲制药商展开后期疫苗临床试验](/articles/voa/1040517.md)
 
 5-27 [维园光海难再现 香港再次禁止“六四”烛光守夜晚会](/articles/voa/1040518.md)
-
-5-27 [北京闭门审理杨恒均间谍案 阻止澳大利亚大使旁听](/articles/voa/1040519.md)
 
