--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-10 [中国金融高官警告 : 炒作人民币、商品、楼房 “终会付出沉重代价”](/articles/rfa/1045352.md)
+
 6-10 [北京总动员天安门举办百年党庆    学者指为团结内部应对新冷战](/articles/rfa/1045353.md)
 
 6-10 [中国人大常通过《反外国制裁法》     学者警告北京别高估自己实力](/articles/rfa/1045354.md)
@@ -598,6 +600,4 @@
 5-8 [专访“维艺志”美术品交易平台运营人：希望保存每位香港人的身份认同](/articles/rfa/1045650.md)
 
 5-8 [驻加中国大使批G7搞小团体  加拿大称各国抗中有共识](/articles/rfa/1045651.md)
-
-5-8 [法囯政府支持：参议院投票通过台湾参与国际事务议案](/articles/rfa/1045652.md)
 
