--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-11 [中国通过反外国制裁法 外国驻华企业对黑箱作业深感担忧](/articles/voa/1040216.md)
+
+6-10 [昂山素季面临新的贪腐指控](/articles/voa/1040217.md)
+
 6-10 [匈牙利总理证实，将通过公投决定是否在布达佩斯建立复旦大学分校](/articles/voa/1040218.md)
 
 6-10 [中国严打加密货币洗钱逮捕一千多名嫌犯](/articles/voa/1040219.md)
@@ -596,8 +600,4 @@
 5-28 [美国国务卿就香港立法会通过“爱国者治港” 选举新法发表声明](/articles/voa/1040514.md)
 
 5-27 [因言获罪的00后青年被迪拜释放 搭乘飞机前往土耳其](/articles/voa/1040515.md)
-
-5-27 [台湾披露500万剂BNT疫苗合约破局经过，暗批中国阻挠](/articles/voa/1040516.md)
-
-5-27 [澳大利亚维州再次宣布封城，欧洲制药商展开后期疫苗临床试验](/articles/voa/1040517.md)
 
