--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-11 [立陶宛立新法禁止侵犯人权和公开为北京宣传的人士入境](/articles/voa/1040213.md)
+
+6-11 [时事大家谈: “农村土猪要拱城里白菜”，励志还是可怕？](/articles/voa/1040214.md)
+
+6-11 [美台贸易主管视频对话，将恢复双边TIFA咨商](/articles/voa/1040215.md)
+
 6-11 [中国通过反外国制裁法 外国驻华企业对黑箱作业深感担忧](/articles/voa/1040216.md)
 
 6-10 [昂山素季面临新的贪腐指控](/articles/voa/1040217.md)
@@ -594,10 +600,4 @@
 5-28 [香港立法会三读通过修改选举制度 民主党批倒退未决定参选否](/articles/voa/1040511.md)
 
 5-28 [香港当局威胁银行不得受理黎智英的银行业务，否则刑法伺候](/articles/voa/1040512.md)
-
-5-28 [白宫印太协调人坎贝尔：与中国接触时代已终结](/articles/voa/1040513.md)
-
-5-28 [美国国务卿就香港立法会通过“爱国者治港” 选举新法发表声明](/articles/voa/1040514.md)
-
-5-27 [因言获罪的00后青年被迪拜释放 搭乘飞机前往土耳其](/articles/voa/1040515.md)
 
