--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-11 [欧中人权研讨会失败告终　七国峰会关注香港议题](/articles/rfa/1045349.md)
+
 6-10 [日澳2＋2声明关注台海和平   凸显美日澳三方协作强化](/articles/rfa/1045350.md)
 
 6-10 [习近平视察青海藏区  地方官抓人、作秀](/articles/rfa/1045351.md)
@@ -598,6 +600,4 @@
 5-8 [中国协助印尼打捞潜艇  另有所图？](/articles/rfa/1045647.md)
 
 5-8 [美中对“多边主义”有不同解读   布林肯舌战王毅](/articles/rfa/1045648.md)
-
-5-8 [中国十五个大城市女多男少     为什么？](/articles/rfa/1045649.md)
 
