--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-11 [新冠起源：法国科学家重新朝着来自实验室的线索调查](/articles/rfi/1028228.md)
+
 6-11 [采取生态行动的大西洋城市——拉罗谢尔 - 法国风光](/articles/rfi/1028229.md)
 
 6-11 [欧盟执委会主席：G7峰会将提北爱尔兰争议 – 法国国际广播电台 - RFI](/articles/rfi/1028230.md)
@@ -598,6 +600,4 @@
 6-6 [维吾尔独立法庭　证人：父被杀兄弟被打残 – 法国国际广播电台 - RFI](/articles/rfi/1028526.md)
 
 6-6 [睽违一年半 邮轮重返威尼斯 – 法国国际广播电台 - RFI](/articles/rfi/1028527.md)
-
-6-6 [英首相促G7助全球2022年底前接种 – 法国国际广播电台 - RFI](/articles/rfi/1028528.md)
 
