--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-11 [国际社会帮助协调各国政府应对气候挑战的行动的三个方向 - 今日经济](/articles/rfi/1028226.md)
+
 6-11 [中美承诺合作应对气候危机 - 环境与发展](/articles/rfi/1028227.md)
 
 6-11 [新冠起源：法国科学家重新朝着来自实验室的线索调查](/articles/rfi/1028228.md)
@@ -598,6 +600,4 @@
 6-6 [抗议兴建复旦大学分校 匈牙利民众批讨好中国 – 法国国际广播电台 - RFI](/articles/rfi/1028524.md)
 
 6-6 [抗议兴建复旦大学分校 匈牙利首都万人抗议 – 法国国际广播电台 - RFI](/articles/rfi/1028525.md)
-
-6-6 [维吾尔独立法庭　证人：父被杀兄弟被打残 – 法国国际广播电台 - RFI](/articles/rfi/1028526.md)
 
