--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+6-11 [不顾北京反对 拜登政府首次与台湾讨论商贸合作](/articles/rfi/1028221.md)
+
+6-11 [掌掴共和国总统 吹向民主的恶风 - 要闻分析](/articles/rfi/1028222.md)
+
+6-11 [拜登与约翰逊举行会谈 强调美英在多领域共同合作](/articles/rfi/1028223.md)
+
+6-11 [中国人大通过&quot;反外国制裁法&quot;应对美欧贸易和人权压力](/articles/rfi/1028224.md)
+
+6-11 [英国发表《香港问题半年报告》指责北京镇压异见人士](/articles/rfi/1028225.md)
+
 6-11 [国际社会帮助协调各国政府应对气候挑战的行动的三个方向 - 今日经济](/articles/rfi/1028226.md)
 
 6-11 [中美承诺合作应对气候危机 - 环境与发展](/articles/rfi/1028227.md)
@@ -590,14 +600,4 @@
 6-6 [邹幸彤指拘捕是以言入罪 责港官消音六四是巩固不义一党专政的帮凶](/articles/rfi/1028519.md)
 
 6-6 [协助美洲盟友挺过疫情 贺锦丽将走访瓜、墨两国 – 法国国际广播电台 - RFI](/articles/rfi/1028520.md)
-
-6-6 [解决无证移民潮 贺锦丽将出访瓜地马拉墨西哥 – 法国国际广播电台 - RFI](/articles/rfi/1028521.md)
-
-6-6 [法网艰苦晋级 费德勒考虑是否继续后续赛程 – 法国国际广播电台 - RFI](/articles/rfi/1028522.md)
-
-6-6 [杜兰特29分猎公鹿 篮网季后赛次轮首役取胜 – 法国国际广播电台 - RFI](/articles/rfi/1028523.md)
-
-6-6 [抗议兴建复旦大学分校 匈牙利民众批讨好中国 – 法国国际广播电台 - RFI](/articles/rfi/1028524.md)
-
-6-6 [抗议兴建复旦大学分校 匈牙利首都万人抗议 – 法国国际广播电台 - RFI](/articles/rfi/1028525.md)
 
