--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-11 [习近平要塑造“可爱”中国   新晋“国师”张维为能胜任吗？](/articles/rfa/1045344.md)
+
 6-11 [报告指中共在新疆严控生育  美议员促通过新疆法案](/articles/rfa/1045345.md)
 
 6-11 [拜登撤销特朗普的禁令   TikTok、微信万事大吉了吗？](/articles/rfa/1045346.md)
@@ -598,6 +600,4 @@
 5-10 [海外蒙古族东京游行  600人纪念“莫日根事件”十周年](/articles/rfa/1045642.md)
 
 5-10 [维权律师余文生 覃永沛 母亲节与至亲团聚](/articles/rfa/1045643.md)
-
-5-10 [废止中国大陆时代军制 台湾“军团”将改“作战区”](/articles/rfa/1045644.md)
 
