--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-11 [中国反外国制裁法谁会害怕](/articles/rfi/1028219.md)
+
+6-11 [“拜登想让普京和中国知道美国和欧洲是紧密团结的” - 法国世界报](/articles/rfi/1028220.md)
+
 6-11 [不顾北京反对 拜登政府首次与台湾讨论商贸合作](/articles/rfi/1028221.md)
 
 6-11 [掌掴共和国总统 吹向民主的恶风 - 要闻分析](/articles/rfi/1028222.md)
@@ -596,8 +600,4 @@
 6-6 [法国外交部纪念六四：中国可怕镇压不该被遗忘](/articles/rfi/1028517.md)
 
 6-6 [6万多荷兰家长状告抖音 索赔14亿欧元](/articles/rfi/1028518.md)
-
-6-6 [邹幸彤指拘捕是以言入罪 责港官消音六四是巩固不义一党专政的帮凶](/articles/rfi/1028519.md)
-
-6-6 [协助美洲盟友挺过疫情 贺锦丽将走访瓜、墨两国 – 法国国际广播电台 - RFI](/articles/rfi/1028520.md)
 
