--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+6-11 [G7峰会前夕 美国第一夫人衣着展现关爱全球讯息 – 法国国际广播电台 - RFI](/articles/rfi/1028206.md)
+
 6-11 [疫情后北美线游轮首航 名人千禧号2游客阳性反应 – 法国国际广播电台 - RFI](/articles/rfi/1028207.md)
 
 6-11 [美国佛州超市爆枪击 3死含1童及嫌犯 – 法国国际广播电台 - RFI](/articles/rfi/1028208.md)
@@ -598,6 +600,4 @@
 6-6 [法国议会补选 闪现明年总统大选先兆 - 要闻解说](/articles/rfi/1028504.md)
 
 6-6 [美参议员达克沃丝等旋风式访台3小时宣布捐赠台湾75万剂疫苗](/articles/rfi/1028505.md)
-
-6-6 [电子人民币或将冲击美元和欧元垄断](/articles/rfi/1028506.md)
 
