--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-11 [匈牙利总理让步 愿以公投解决复旦校区争议](/articles/dw/1041997.md)
+
 6-11 [G7承诺捐十亿疫苗  美英各送五亿及一亿剂](/articles/dw/1041998.md)
 
 6-11 [台美贸易代表会晤 确认数周内展开贸易对谈](/articles/dw/1041999.md)
@@ -598,6 +600,4 @@
 5-25 [新冠时期学习的极限](/articles/dw/1042295.md)
 
 5-25 [中国四招假讯息扰台 藉大选与疫情发动攻势](/articles/dw/1042296.md)
-
-5-25 [手机业务放一边 媒体爆华为发展转向](/articles/dw/1042297.md)
 
