--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+6-11 [布莱尔：随着中西关系恶化 七国集团越来越有意义](/articles/rfi/1028173.md)
+
+6-11 [马克龙：在印太地区既不成为中国附庸 也不与美国保持一致](/articles/rfi/1028174.md)
+
 6-11 [因应疫情严峻  东奥工作人员下周起打疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1028175.md)
 
 6-11 [香港开始电影审查 对文化自由新打击](/articles/rfi/1028176.md)
@@ -596,8 +600,4 @@
 6-7 [「小红书」微博被停 六四当日曾问「今天」是几月几号](/articles/rfi/1028471.md)
 
 6-7 [雷纳德准大三元 率快艇进军季后赛第2轮 – 法国国际广播电台 - RFI](/articles/rfi/1028472.md)
-
-6-7 [英国王室欣喜  梅根第2胎产女 – 法国国际广播电台 - RFI](/articles/rfi/1028473.md)
-
-6-7 [贺锦丽出访座机有状况  返回基地换机再出发 – 法国国际广播电台 - RFI](/articles/rfi/1028474.md)
 
