--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+6-11 [日本高官连称台湾为“国”  外交政策发生重大改变？](/articles/rfa/1045339.md)
+
 6-11 [关注“黄琦案”   四川维权人士谢俊彪遭刑事拘留](/articles/rfa/1045340.md)
 
 6-11 [人大立法治罪诋毁贬损军人  违反微信“家规”将永久封号](/articles/rfa/1045341.md)
@@ -598,6 +600,4 @@
 5-11 [中资在加拿大开办学校  要求老师避谈敏感话题](/articles/rfa/1045637.md)
 
 5-11 [外卖骑手：陷入算法困境  被资本剥削到极致](/articles/rfa/1045638.md)
-
-5-11 [“美团”CEO发唐诗后速删   或步马云后尘？](/articles/rfa/1045639.md)
 
